updated drag elements

--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
         </div>
     
         <div id="physicsUnits" style="display: none;">
-            <div id="physicsUnits1" draggable="true" ondragstart="drag(event)">Physics Unit 1</div>
-            <div id="physicsUnits2" draggable="true" ondragstart="drag(event)">Physics Unit 2</div>
+            <div id="physicsUnits1" draggable="true" ondragstart="drag(event)">Physics Unit 1: Kinematics</div>
+            <div id="physicsUnits2" draggable="true" ondragstart="drag(event)">Physics Unit 2: Force and Translational Dynamics</div>
+            <div id="physicsUnits3" draggable="true" ondragstart="drag(event)">Physics Unit 3: Work Energy, and Power</div>
+            <div id="physicsUnits4" draggable="true" ondragstart="drag(event)">Physics Unit 4: Linear momentum of Rotating Systems</div>
+            <div id="physicsUnits5" draggable="true" ondragstart="drag(event)">Physics Unit 5: Torque and Rotational Dynamics</div>
+            <div id="physicsUnits6" draggable="true" ondragstart="drag(event)">Physics Unit 6: Energy and Momentum of Rotating Systems</div>
+            <div id="physicsUnits7" draggable="true" ondragstart="drag(event)">Physics Unit 7: Oscillations</div>
+            <div id="physicsUnits8" draggable="true" ondragstart="drag(event)">Physics Unit 8: Fluids</div>
         </div>
     
         <div id="dropZones">
