finished home page

--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
         </div>
     </div>   
 
-    <script src="home.js"></script>
 
-    <form action="calendar.html">
-        <button type="submit" class="button">Submit</button>
+    <form action="calendar.html" id="calendarSubmit">
+        <button type="submit" class="button" style="display: none; margin-left: 30px">Submit</button>
     </form>
+
+    <script src="home.js"></script>
     
 </body>
 </html>
