--- a/calendar.html
+++ b/calendar.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <script src="calendar.js" defer></script>
   </head>
+  
   <body>
     <div class="wrapper">
       <header>
@@ -37,8 +38,35 @@
           <li>Sat</li>
         </ul>
         <ul class="days"></ul>
+        <ul class="days1"></ul> 
       </div>
+
     </div>
-   
+    
   </body>
+
+  
+  <!-- <div1>Study Unit 4 for 1 hr</div1>
+  <style>
+    div1 {
+      position: absolute;
+      width: 150px;
+      fill: green
+      
+    }
+    </style>
+  -->
+  <!-- 
+  <style>
+    div {
+      background-color: lightgrey;
+      width: 300px;
+      border: 15px solid green;
+      padding: 50px;
+      margin: 20px;
+    }
+    </style>
+  -->
+  
+  
 </html>
