--- a/index.html
+++ b/index.html
@@ -54,13 +54,11 @@
 
     <div id="daysInput" style="display: none">
     <span>How many days do you need to study this topic?</span>
-    <input type="text" style="width: 50px">
+    <input type="text" id="daysInputField" style="width: 50px">
     </div>
 
-    <form action="calendar.html" id="calendarSubmit">
-        <input type="hidden" id="unitOrderInput" name="unitOrder"> 
-        <input type="hidden" id="daysValue" name="daysValue">
-        <button type="submit" class="button" style="display: none; margin-left: 30px; margin-bottom: 20px">Submit</button>
+    <form action="calendar.html">
+        <button type="submit" id="calendarSubmit" class="button" style="display: none; margin-left: 30px; margin-bottom: 20px">Submit</button>
     </form>
 
     <script src="home.js"></script>
