--- a/calendar.html
+++ b/calendar.html
@@ -8,6 +8,8 @@
     <!-- Google Font Link for Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
     <script src="calendar.js" defer></script>
+    <!-- <script src="home.js"></script> -->
+    
   </head>
   
   <body>
