this is moved to plan-b

--- a/calendar.html
+++ b/calendar.html
@@ -55,18 +55,120 @@
     </div>
     
   </body>
-
-  
-  <!-- <div1>Study Unit 4 for 1 hr</div1>
+  <div21>Study csUnits4 for 1 hr</div21>
   <style>
-    div1 {
+    div21 {
       position: absolute;
+      bottom: 90px;
+      left:320px;
       width: 150px;
-      fill: green
-      
+    }
+  </style>
+  <div22>Study csUnits5 for 1 hr</div22>
+  <style>
+    div22 {
+      position: absolute;
+      bottom: 90px;
+      left:480px;
+      width: 150px;
     }
     </style>
-  
+    <div23>Study csUnits5 for 1 hr</div23>
+    <style>
+      div23 {
+        position: absolute;
+        bottom: 90px;
+        left: 640px;
+        width: 150px;
+      }
+    </style>
+    <div24>Study physicsUnits2 for 1 hr</div24>
+    <style>
+      div24 {
+        position: absolute;
+        bottom: 90px;
+        left: 800px;
+        width: 150px;
+      }
+    </style>
+    <div25>Study physicsUnits2 for 1 hr</div25>
+    <style>
+      div25 {
+        position: absolute;
+        bottom: 90px;
+        left: 960px;
+        width: 150px;
+      }
+    </style>
+    <div26>Study physicsUnits2 for 1 hr</div26>
+    <style>
+      div26 {
+        position: absolute;
+        bottom: 90px;
+        left: 1120px;
+        width: 150px;
+      }
+    </style>
+    <div27>Study csUnits6 for 1 hr</div27>
+    <style>
+      div27 {
+        position: absolute;
+        bottom: -10px;
+        left: 160px;
+        width: 150px;
+      }
+    </style>
+    <div28>Study csUnits6 for 1 hr</div28>
+    <style>
+      div28 {
+        position: absolute;
+        bottom: -10px;
+        left: 320px;
+        width: 150px;
+      }
+    </style>
+    <div29>Study csUnits6 for 1 hr</div29>
+    <style>
+      div29 {
+        position: absolute;
+        bottom: -10px;
+        left: 480px;
+        width: 150px;
+      }
+    </style>
+    <div30>Study csUnits6 for 1 hr</div30>
+    <style>
+      div30 {
+        position: absolute;
+        bottom: -10px;
+        left: 640px;
+        width: 150px;
+      }
+    </style>
+    <div31>Study csUnits6 for 1 hr</div31>
+    <style>
+      div31 {
+        position: absolute;
+        bottom: -10px;
+        left: 800px;
+        width: 150px;
+      }
+    </style>
+    <div1>Study csUnits6 for 1 hr</div1>
+    <style>
+      div1 {
+        position: absolute;
+        bottom: -10px;
+        left: 960px;
+        width: 150px;
+      }
+    </style>
+   
+
+
+
+
+  <!--
   <style>
     div {
       background-color: lightgrey;
