changed dropzone variables to 1

--- a/index.html
+++ b/index.html
@@ -353,46 +353,10 @@
             <div id="worldUnit9" draggable="true" ondragstart="drag(event)">Unit 9: Globalization</div>
         </div>
 
-        <div id="dropZones">
-            <div class="dropzone" id="physicsDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display: none;"></div>
-            <div class="dropzone" id="comsciDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display: none;"></div>
-            <div class="dropzone" id="physics2DropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="physics3DropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="bioDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="aaDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="artHistoryDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="calcABDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="calcBCDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="chemDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="chineseDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="compGovPolDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="csprDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="litDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="apesDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="euroDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="frenchDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="germanDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="hugDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="italianDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="japaneseDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="latinDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="macroEconDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="microEconDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="musicTheoryDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="physics3aDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="precalcDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="psychDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="spanishDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="statsDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="usgovDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="apushDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-            <div class="dropzone" id="worldDropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display:none;"></div>
-
         <div class="dropZone" ondrop="drop(event)" ondragover="allowDrop(event)" style="display: none;"></div>
-        </div>
 
     <div id="daysInput" style="display: none">
-    <span>How many days do you need to study this topic?</span>
+    <br><span>How many days do you need to study this topic?</span>
     <input type="text" id="daysInputField" style="width: 50px">
     </div>
 
