--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Your Study Planner</title>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id="header">Study Planner</div>
+    <div id="header">Welcome to Your Study Planner!</div>
+    <div id="explanation">Your Study Planner helps high schoolers manage their study schedule for difficult subjects in school. 
+        A very important ability to build in high school is time management, a skill we can carry for life. 
+        This app arranges students’ time in a reasonable manner according to their schedules - by this, we mean that our app 
+        will help prevent the bad habit of last minute cramming - and thus, we hope to help high schoolers reduce their stress, 
+        improve productivity and time management. 
+
+    </div>
     <div id="choose">Choose a Course:</div>
     <form action="" id="loginForm">
         <select id="courses">
